--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
-    <title>Piano Web App</title>
+    <title>Mario Piano</title>
     </head>
     <body>
+        <!-- header for title and button -->
+        <h1 class="game-title">Super Mario Bros.</h1>
+       <button id="mario-btn">Play Mario Theme</button>
         <div class="piano">
             <div class="piano">
       <div data-note="C" class="key white"></div>
